force-app/main/default/objects/fw1__Recurring_Usage_Holding_File__c/fw1__Recurring_Usage_Holding_File__c.object-meta.xml
<CustomObject>
    <label>Recurring Usage Holding File</label>
    <nameField>
        <label>External ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Usage Holding File</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>