force-app/main/default/objects/fw1__Recurring_Usage_Holding_File__c/fields/fw1__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>