force-app/main/default/objects/fw1__Recurring_Usage_Holding_File__c/fields/fw1__Item__c.field-meta.xml
<CustomField>
    <fullName>fw1__Item__c</fullName>
    <label>Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>