force-app/main/default/objects/fw1__Recurring_Usage_Holding_File__c/fields/fw1__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>