force-app/main/default/objects/fw1__Recurring_Usage_Holding_File__c/fields/fw1__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>fw1__Unit_Price__c</fullName>
    <label>Unit Price / Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>