force-app/main/default/objects/fw1__Recurring_Usage_Holding_File__c/listViews/fw1__All.listView-meta.xml
<ListView>
    <fullName>fw1__All</fullName>
    <columns>NAME</columns>
    <columns>fw1__Item__c</columns>
    <columns>fw1__Start_Date__c</columns>
    <columns>fw1__End_Date__c</columns>
    <columns>fw1__Quantity__c</columns>
    <columns>fw1__Unit_Price__c</columns>
    <columns>fw1__Total_Amount__c</columns>
    <columns>fw1__Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>